--- a/legacy.css
+++ b/legacy.css
@@ -490,6 +490,9 @@ template {
 :root{}
 :root{}
 :root{}
+:root{}
+:root{}
+:root{}
 @charset "UTF-8";
 .theme-light {
   --primary-color: hsla(216, 76%, 44%, 1);
@@ -521,6 +524,7 @@ template {
   --bg-bg: hsla(0, 0%, 100%, 1);
   --bg-minor: hsla(216, 20%, 95%, 1);
   --bg-shadows: 0px 2px 4px 0px hsla(226, 19%, 16%, 0.2);
+  --bg-shadows-tabs: 0px 0px 10px 0px hsla(216, 76%, 44%, 0.1);
   --bg-green: hsla(146, 48%, 49%, 0.05);
   --border-primary: hsla(223, 22%, 87%, 1);
   --border-secondary: hsla(222, 33%, 94%, 1);
@@ -560,9 +564,7 @@ template {
   --select-text-color: var(--text-normal);
   --select-text-hover-color: var(--primary-color);
   --select-dropdown-bg-color: var(--bg-bg);
-  --select-dropdown-bg-hover-color: var(
-    --primary-color-2
-  );
+  --select-dropdown-bg-hover-color: var(--primary-color-2);
   --table-head-bg-color: var(--table-header);
   --table-primary-bg-color: var(--table-primary);
   --table-secondary-bg-color: var(--table-secondary);
@@ -571,7 +573,7 @@ template {
   --table-hover-color: var(--primary-color-2);
   --table-active-color: var(--grey);
   --table-head-text-color: var(--text-normal);
-  --table-highlight-bg-color: var(--white);
+  --table-highlight-bg-color: var(--bg-header);
   --table-blue-color: var(--primary-color);
   --table-blue-bg-color: var(--components-click);
   --table-green-color: var(--green);
@@ -596,19 +598,19 @@ template {
   --checkbox-inner-color: var(--primary-color);
   --tabs-bg-color: var(--bg-header);
   --tabs-text-color: var(--text-title);
-  --tabs-bg-active-color: var(--white);
+  --tabs-bg-active-color: var(--bg-bg);
   --tabs-text-active-color: var(--primary-color);
   --tabs-border-active-color: var(--primary-color);
   --tabs-active-color: var(--primary-color);
+  --tabs-active-shadows: var(--bg-shadows-tabs);
   --sub-tabs-bg-color: var(--opacity);
   --sub-tabs-text-color: var(--text-secondary);
+  --sub-tabs-text-hover-color: var(--primary-color-5);
   --sub-tabs-bg-active-color: var(--primary-color-5);
   --sub-tabs-text-active-color: var(--white);
   --date-table-weekend-color: var(--primary-color-6);
   --date-table-current-text-color: var(--white);
-  --date-table-current-color: var(
-    --primary-color
-  );
+  --date-table-current-color: var(--primary-color);
   --date-table-bg: var(--bg-bg);
   --table-scroll-bg-color: var(--opacity);
   --table-scroll-track-color: #8a8fa2;
@@ -654,6 +656,7 @@ template {
   --bg-bg: hsla(226, 17%, 15%, 1);
   --bg-minor: hsla(226, 14%, 24%, 1);
   --bg-shadows: 0px 2px 4px 0px hsla(216, 40%, 6%, 0.2);
+  --bg-shadows-tabs: 0px 0px 10px 0px hsla(227, 18%, 10%, 1);
   --bg-green: hsla(146, 48%, 49%, 0.05);
   --border-primary: hsla(216, 22%, 25%, 1);
   --border-secondary: hsla(216, 22%, 23%, 1);
@@ -693,9 +696,7 @@ template {
   --select-text-color: var(--text-normal);
   --select-text-hover-color: var(--primary-color);
   --select-dropdown-bg-color: var(--bg-bg);
-  --select-dropdown-bg-hover-color: var(
-    --primary-color-2
-  );
+  --select-dropdown-bg-hover-color: var(--primary-color-2);
   --table-head-bg-color: var(--table-header);
   --table-primary-bg-color: var(--table-primary);
   --table-secondary-bg-color: var(--table-secondary);
@@ -704,9 +705,9 @@ template {
   --table-hover-color: var(--primary-color-2);
   --table-active-color: var(--grey);
   --table-head-text-color: var(--text-normal);
-  --table-highlight-bg-color: var(--white);
+  --table-highlight-bg-color: var(--bg-header);
   --table-blue-color: var(--primary-color);
-  --table-blue-bg-color: var(--components-click);
+  --table-blue-bg-color: var(--primary-color-1);
   --table-green-color: var(--green);
   --table-green-bg-color: var(--bg-green);
   --aside-bg-color: var(--bg-primary);
@@ -729,19 +730,19 @@ template {
   --checkbox-inner-color: var(--primary-color);
   --tabs-bg-color: var(--bg-header);
   --tabs-text-color: var(--text-title);
-  --tabs-bg-active-color: var(--white);
+  --tabs-bg-active-color: var(--bg-bg);
   --tabs-text-active-color: var(--primary-color);
   --tabs-border-active-color: var(--primary-color);
   --tabs-active-color: var(--primary-color);
+  --tabs-active-shadows: var(--bg-shadows-tabs);
   --sub-tabs-bg-color: var(--opacity);
   --sub-tabs-text-color: var(--text-secondary);
+  --sub-tabs-text-hover-color: var(--primary-color-5);
   --sub-tabs-bg-active-color: var(--primary-color-5);
   --sub-tabs-text-active-color: var(--white);
   --date-table-weekend-color: var(--primary-color-6);
   --date-table-current-text-color: var(--white);
-  --date-table-current-color: var(
-    --primary-color
-  );
+  --date-table-current-color: var(--primary-color);
   --date-table-bg: var(--bg-bg);
   --table-scroll-bg-color: var(--background-color-secondary);
   --table-scroll-track-color: var(--grey);
